# kitti-dataset-loader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: kitti.h
src/: kitti.cpp  main.cpp
